--- a/student Reports/report_2024-02-29_19-23-15.html
+++ b/student Reports/report_2024-02-29_19-23-15.html
@@ -8,61 +8,60 @@
     <h1>Attendance Report</h1>
     <p>Student Name: Mahmoud Ibrahim</p>
     <p>Student ID: 1S</p>
-    <p>Course Name: </p>
     <table>
       <tr>
         <th>Date</th>
         <th>Course Name</th>
-        <th>Teacher ID</th>
+        <th>Teacher Name</th>
         <th>Session Number</th>
         <th>Status</th>
       </tr>
       <tr>
         <td>2022-03-22</td>
         <td>Xml</td>
-        <td>1T</td>
+        <td>Ayman Ahmed</td>
         <td>1</td>
         <td>Attend</td>
       </tr>
       <tr>
         <td>2022-03-24</td>
         <td>Xml</td>
-        <td>1T</td>
+        <td>Ayman Ahmed</td>
         <td>2</td>
         <td>Absent</td>
       </tr>
       <tr>
         <td>2022-03-25</td>
         <td>Xml</td>
-        <td>1T</td>
+        <td>Ayman Ahmed</td>
         <td>3</td>
         <td>Absent</td>
       </tr>
       <tr>
         <td>2022-03-26</td>
         <td>Xml</td>
-        <td>1T</td>
+        <td>Ayman Ahmed</td>
         <td>4</td>
         <td>Absent</td>
       </tr>
       <tr>
         <td>2023-04-04</td>
         <td>Java</td>
-        <td>2T</td>
+        <td>Mohamed Ahmed</td>
         <td>1</td>
         <td>Attend</td>
       </tr>
       <tr>
         <td>2023-04-05</td>
         <td>Java</td>
-        <td>2T</td>
+        <td>Mohamed Ahmed</td>
         <td>2</td>
         <td>Absent</td>
       </tr>
       <tr>
         <td>2023-04-06</td>
         <td>Java</td>
-        <td>2T</td>
+        <td>Mohamed Ahmed</td>
         <td>3</td>
         <td>Absent</td>
       </tr>
